# mysql-rust

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_DURABILITY_PLAN.md  PRODUCTION_READINESS.md  PROGRESS.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
benches/: mysql_bench.rs
e2e/: main.rs
src/: config.rs  error.rs  lib.rs  main.rs  observability.rs
src/auth/: caching_sha2.rs  mod.rs  native_password.rs  sha1.rs  sha256.rs
src/protocol/: capabilities.rs  command.rs  handshake.rs  lenenc.rs  mod.rs  packet.rs  prepared.rs  response.rs  resultset.rs
src/query/: executor.rs  mod.rs  parser.rs
src/server/: connection.rs  mod.rs  tls.rs
src/storage/: engine.rs  log.rs  log_writer.rs  mod.rs  transaction.rs  value.rs
tests/: auth.rs  caching_sha2.rs  concurrency.rs  conformance.rs  crash.rs  fuzz.rs  handshake.rs  idle_timeout.rs  limits.rs  multi_statement.rs  observability.rs  persistence.rs  prepared.rs  query.rs  sql.rs  tls.rs  transactions.rs
tests/common/: mod.rs
