[package]
name = "mysql-rust"
version = "0.1.0"
edition = "2021"
description = "A MySQL-compatible database server written in Rust (early-stage skeleton)"
license = "MIT OR Apache-2.0"
readme = "README.md"

# First real dependency (Phase 6, ROADMAP.md): the single-connection path
# was proven blocking/std-only through Phases 1-5 as planned. tokio brings
# real concurrency — one async task per connection instead of one at a time
# — which the storage layer is now built to support (Storage::* take &self;
# see src/storage/engine.rs). Feature set is deliberately narrow: rt +
# rt-multi-thread (a real multi-threaded scheduler, so the concurrency is
# genuine parallelism, not just interleaving), net (TcpListener/TcpStream),
# io-util (AsyncRead/AsyncWriteExt), macros (#[tokio::main]/#[tokio::test]),
# signal (SIGINT/SIGTERM for graceful shutdown), sync (the shutdown
# broadcast + connection-limit semaphore), time (bounded shutdown drain).
[dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time"] }
# TLS (Phase 9, ROADMAP.md): `CLIENT_SSL` support. TLS genuinely cannot be
# hand-rolled (unlike SHA-1), so this is a necessary crypto dependency.
# `ring` backend (not the aws-lc-rs default) is deliberate — it builds
# cleanly here without cmake/a full C toolchain. Narrow features: no
# certificate-verification machinery is pulled in beyond what a server
# needs (the server presents a cert; it doesn't verify client certs).
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }

[dev-dependencies]
# Generates a self-signed certificate at test time so the TLS integration
# test needs no checked-in key material (which would carry an expiry and be
# an odd thing to commit). `ring` backend to match the server's.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# End-to-end conformance (Phase 10): a real, standard third-party MySQL
# driver — not our own scripted client — connecting to the server proves
# genuine wire compatibility. `mysql_async` is tokio-based (matches our
# runtime). default-features off drops TLS/compression backends we don't
# need for the plaintext conformance test and keeps the build lean.
mysql_async = { version = "0.34", default-features = false, features = ["minimal"] }

# A standalone runnable e2e app (not a `cargo test`): boots a real server and
# drives it with the real driver, one entry at a time. `cargo run --example e2e`.
[[example]]
name = "e2e"
path = "e2e/main.rs"

# Performance baseline (PERFORMANCE_DURABILITY_PLAN.md, phase PD-0).
# `harness = false` means this is a plain `fn main()`, not libtest's
# `#[bench]` harness (which needs nightly) — no new dependency: see the
# file's own doc comment for why this doesn't reach for `criterion`.
# `cargo bench` builds it in the release profile automatically.
[[bench]]
name = "mysql_bench"
path = "benches/mysql_bench.rs"
harness = false

# PERFORMANCE_DURABILITY_PLAN.md P10: the two standard, well-known free wins
# for a long-running server binary (as opposed to a CLI tool run once and
# exited, where slower-but-cheaper compilation matters more than runtime
# speed). `lto = "thin"` optimizes across crate boundaries (this binary's
# own code against tokio/tokio-rustls) at a fraction of "fat" LTO's build
# time; `codegen-units = 1` gives the optimizer the whole crate as one unit
# instead of splitting it for parallel compilation. Both cost extra build
# time in exchange for runtime speed -- exactly the right trade for a
# server that's compiled once and then runs for a long time. Before/after
# numbers recorded in PERFORMANCE_DURABILITY_PLAN.md's benchmark table.
[profile.release]
lto = "thin"
codegen-units = 1
